# OpenGlLearn

./: CMakeLists.txt  CMakeSettings.json  OpenGlLearn.cpp  OpenGlLearn.h  README.md  glfw.cc  glfw.h  render.cc  render.h  shader.cc  shader.h  stb_image.h  tex.cc  tex.h
glad/: glad.c  glad.h
shaders/002/: fragment.glsl  vertex.glsl
shaders/003/: fragment.glsl  vertex.glsl
